Finalização do estilo

--- a/styles/colors_fonts.scss
+++ b/styles/colors_fonts.scss
@@ -1,14 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&family=Source+Code+Pro:wght@400;500;600;700;800;900&display=swap');
 
-/* FONTES */
+// fontes;
 
 $tittlefont: 'Poppins', sans-serif;
 $mainfont: 'Source Code Pro', monospace;
 
-/* CORES */
+// conjunto background;
 
 $delftBlue: #1D3461;
 $polynesianBlue: #1F487E;
 $lapisLazuli: #376996;
 $silverLakeBlue: #6290C8;
 $vistaBlue: #829CBC;
+
+// conjunto efeito nas divs;
+
+$purple: #9572FC;
+$green: #43E7AD;
+$yellow: #E2D45C;
