--- a/styles/colors_fonts.css
+++ b/styles/colors_fonts.css
@@ -1,3 +1,1 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&family=Source+Code+Pro:wght@400;500;600;700;800;900&display=swap");
-/* FONTES */
-/* CORES *//*# sourceMappingURL=colors_fonts.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&family=Source+Code+Pro:wght@400;500;600;700;800;900&display=swap");/*# sourceMappingURL=colors_fonts.css.map */
